Fix wording in index.html, fix bug where animation continued when screen was rotated and ball was out of screen, fix hat position on some screen sizes

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -31,7 +31,7 @@
     cursor: pointer;
     color: black;
     font-weight: bolder;
-    text-shadow: grey 1px 0 10px;
+    text-shadow: white 4px 0 10px;
 }
 
 #navbar > li > a:hover{
